--- a/index.html
+++ b/index.html
@@ -388,58 +388,58 @@ const heroes = {
 
   "Marion": {race:"Arcane Sage", role:"Mage", title:"Spatial Sage",
     melee:"Arcane Staff — channels spatial magic to erect shimmering barriers, bend trajectories, and reshape the battlefield with surgical precision.",
-    abilities:[["Spatial Barrier","Generates shimmering zones that absorb, deflect, and redirect incoming attacks while shielding allies."],["Phase Step","Short-range teleportation with flickering afterimages to evade or reposition with precision."],["Gravitic Pull","Bends gravity in a targeted area, slowing or pinning enemies without damaging terrain."],["Dimensional Insight","Reads battlefield flow, predicts enemy actions, and turns terrain itself into a strategic weapon."]],
-    passives:["Unmaiden Transport — Opens controlled rifts to safely reposition allies.","Bodily Void — has semi-strong constant field of spatial magic surrounding her(Can be destroyed)","Arcane Awareness — Constantly senses traps, hidden threats, and distortions across the map.","Spatial Reflex — Accelerated reaction time under pressure, allowing flawless evasion and countering."],
+    abilities:[["Spatial Barrier","Generates protective zones that absorb, deflect, and redirect incoming attacks while shielding allies."],["Phase Step","Short-range teleportation with flickering afterimages to evade or reposition with precision."],["Gravitic Pull","Bends gravity in a targeted area, slowing or pinning enemies without damaging terrain."],["Aether Burst","Unleashes a focused dimensional pulse that blasts enemies backward, disrupts their attacks, and instantly cleanses negative effects from nearby allies"]],
+    passives:["Unmaiden Transport — Already visited places are naturally attuned to teleport to.","Bodily Void — has semi-strong constant field of spatial magic surrounding her(Can be destroyed)","Arcane Awareness — Constantly senses traps, hidden threats, and distortions across the map.","Spatial Reflex — Accelerated reaction time under pressure, allowing flawless evasion and countering."],
     stats:{Defense:20,Strength:12,Agility:12,Intelligence:20,Perception:19,"Magic Control":20,"Technique Control":19},
     ultimate:"Eclipse of Realms — Marion tears open a colossal spatial rift above the battlefield. Enemies are slowed, projectiles nullified, and allies gain free movement through warped space. Layers of gravitational zones crush enemy formations while Marion controls positioning like a celestial puppeteer."
 },
 
 "Mark": {race: "Dark Elf", role: "Assassin", title: "Shadow Reaper",
-  melee: "Shadow Scythe — a cursed blade that can extend, phase through matter, and siphon energy from enemies.",
-  abilities: "Shadow Manipulation — shape darkness into weapons, tendrils, or barriers; Umbral Slash — afterimage strikes hit multiple times or confuse foes; Cloak of Night — near-invisibility in dim or dark areas; Nightmare Grip — immobilizes enemies with shadow tendrils.",
-  passives: "Shadow Travel — short-distance teleport through shadows; Predator’s Focus — higher crit chance when stalking unseen; Umbral Resilience — reduced damage in darkness.",
-  stats: { Defense: 10, Strength: 17, Agility: 18, Intelligence: 17, Perception: 19, 'Magic Control': 20, 'Technique Control': 18 },
-  ultimate: "Domain Expansion: Eternal Eclipse — a massive dome of darkness where only Mark can see; enemies are disoriented and attacked by shadow constructs as his power surges."
+    melee: "Shadow Scythe — a cursed blade that can extend, phase through matter, and siphon energy from enemies.",
+    abilities: "Shadow Manipulation — Shapes darkness into weapons, tendrils, or barriers; can attack or defend silently; Umbral Slash — Scythe strikes leave afterimages that hit multiple times or confuse enemies.; Cloak of Night — Becomes nearly invisible in dim or dark areas; perfect for ambushes.; Nightmare Grip — Temporarily immobilizes enemies by wrapping them in shadow tendrils.",
+    passives: "Shadow Travel — short-distance teleport through shadows; Predator’s Focus — higher crit chance when stalking unseen; Umbral Resilience — Gains reduced damage from physical and magical attacks while in shadowed environments.",
+    stats: { Defense: 10, Strength: 17, Agility: 18, Intelligence: 17, Perception: 19, 'Magic Control': 20, 'Technique Control': 18 },
+    ultimate: "Domain Expansion: Eternal Eclipse — Mark envelops a large area in a dome of pure darkness. Only he can see inside; enemies are disoriented and attacked by shadow constructs while his speed, strength, and technique are massively boosted."
 },
 
   "Mario": {race: "Beastman (Wolf Type)", role: "Tank", title: "Tactical Commander",
-  melee: "Cybernetic Gauntlets — enhanced for both brutal punches and gadget-assisted strikes; can amplify force, shock, or grapple enemies.",
-  abilities: "Animal Instinct — Heightened senses and reflexes: detects danger, predicts enemy movements, and reacts instantly with inhuman precision; Weapon Utilization — Instantly masters any weapon adapts attacks to enemies, terrain, and combat flow.; Overdrive Assault — Adrenaline surge boosts all physical stats moves faster, hits harder, fights like a storm.; Tactical Coordination — Leads allies with perfect timing; boosts teamwork, precision, and combat efficiency.",
-  passives: "Savage Core — stronger at low HP; Beast Reflexes — auto dodges in range; Military Discipline — boosted endurance & focus.",
-  stats: { Defense: 17, Strength: 18, Agility: 18, Intelligence: 16, Perception: 19, "Magic Control": 10, "Technique Control": 18 },
-  ultimate: "Lunar Assault — taps full Beastman instincts and military expertise, gaining immense strength, speed, and perception for 30 seconds with devastating blitz attacks."
+    melee: "Cybernetic Gauntlets — enhanced for both brutal punches and gadget-assisted strikes; can amplify force, shock, or grapple enemies.",
+    abilities: "Animal Instinct — Heightened senses and reflexes: detects danger, predicts enemy movements, and reacts instantly with inhuman precision; Weapon Utilization — Instantly masters any weapon adapts attacks to enemies, terrain, and combat flow.; Overdrive Assault — Adrenaline surge boosts all physical stats moves faster, hits harder, fights like a storm.; Tactical Coordination — Leads allies with perfect timing; boosts teamwork, precision, and combat efficiency.",
+    passives: "Savage Core — stronger at low HP; Beast Reflexes — auto dodges in range; Military Discipline — boosted endurance & focus.",
+    stats: { Defense: 17, Strength: 18, Agility: 18, Intelligence: 16, Perception: 19, "Magic Control": 10, "Technique Control": 18 },
+    ultimate: "Lunar Assault — taps full Beastman instincts and military expertise, gaining immense strength, speed, and perception for 30 seconds with devastating blitz attacks."
 },
 
-  "Maxwell": {race: "Elf", role: "DPS", title: "Cheerful Berserker",
-  melee: "Electrified Polearm — a long pole infused with lightning; delivers devastating strikes and channels ranged electrical attacks.",
-  abilities: "Electrokinesis — controls lightning for offense or enhancement; Thunder Therapy — shocks enemies or lightly heals allies; Storm Dash — moves at lightning speed, leaving afterimages; Chain Lightning — lightning jumps between multiple targets.",
-  passives: "Lightning Affinity — lightning costs less energy and hits harder; Lightning Resistance — immune to shocks and electric damage; Berserker Spark — grows stronger and faster when hurt.",
-  stats: { Defense: 12, Strength: 12, Agility: 19, Intelligence: 16, Perception: 19, 'Magic Control': 19, 'Technique Control': 19 },
-  ultimate: "Thunderball Destruction — Maxwell spins his polearm in a massive lightning storm that obliterates everything close, leaving the battlefield crackling."
+  "Maxwell": {race: "Elf",role: "DPS",title: "Cheerful Berserker",
+    melee: "Electrified Polearm — a long polearm forged with storm-touched steel, constantly crackling with electrical energy. It delivers rapid, devastating melee strikes and can also channel lightning outward for ranged attacks, making it deadly up close or from afar.",
+    abilities: "Electrokinesis — manipulates lightning freely for direct attacks or to enhance weapon strikes with extra power; Thunder Therapy — sends focused shocks that can electrocute enemies or lightly heal and energize allies; Storm Dash — bursts forward at lightning speed, leaving behind afterimages and striking multiple foes during movement; Chain Lightning — launches arcs of lightning that jump between several enemies, creating wide-area shock damage; Aether Burst — releases an explosive pulse of energy that knocks enemies back and purges status effects from allies; Voltage Overdrive — temporarily floods the body with raw current, increasing speed, strength, and reaction time dramatically; Heaven’s Wrath — summons a massive thunderbolt from the sky, detonating on impact and spreading a powerful shockwave across the battlefield.",
+    passives: "Lightning Affinity — lightning abilities cost less energy and deliver amplified damage; Lightning Resistance — complete immunity to electrical attacks and shock damage; Berserker Spark — the more damage he takes, the stronger and faster he becomes; Static Momentum — builds up electrical charge while moving, boosting the damage of the next attack; Stormborn Instinct — automatically performs a split-second dodge when surrounded or ambushed, as if guided by instinctive lightning reflexes.",
+    stats: {Defense: 12,Strength: 12,Agility: 19,Intelligence: 16,Perception: 19,"Magic Control": 19,"Technique Control": 19},
+    ultimate: "Thunderball Destruction — Maxwell channels every volt of stored energy into his polearm, spinning it rapidly to form a towering storm of raw lightning. The storm expands outward, vaporizing everything close, disrupting magical energy in the area, and leaving the entire battlefield wrapped in static electricity for several seconds."
 },
 
-  "Natasha": {race: "Chronian", role: "Mage", title: "Time Warden",
-  melee: "Temporal Umbrella — a shield-weapon hybrid that can deflect, rewind, or freeze projectiles momentarily.",
-  abilities: "Chronokinesis — manipulate time flow in localized zones; Delay Field — temporal bubble slows enemies and projectiles; Time Skip — blink forward or backward in time; Aging Touch — accelerate time to corrode or weaken objects.",
-  passives: "B.O.T — processes events faster for sharper reactions; Temporal Awareness — senses attacks moments before impact.",
-  stats: { Defense: 12, Strength: 10, Agility: 14, Intelligence: 20, Perception: 20, 'Magic Control': 20, 'Technique Control': 16 },
-  ultimate: "Chrono Collapse — freezes a zone in time for several seconds, allowing Natasha to move freely; delayed effects hit when time resumes."
-},
+  "Natasha": {race: "Chronian",role: "Mage",title: "Time Warden",
+    melee: "Temporal Umbrella — a versatile hybrid of shield and weapon forged with chronal energy. It can deflect incoming attacks, briefly rewind or freeze projectiles midair, and redirect their momentum. Each strike subtly bends time, making it difficult for enemies to react or block.",
+    abilities: "Chronokinesis — manipulates time in localized areas, allowing Natasha to slow, speed up, or briefly pause everything inside; Delay Field — creates a temporal bubble that drastically slows enemy movement and projectile speed, giving her a tactical advantage; Time Skip — blinks herself a short distance forward or backward along her timeline, instantly evading attacks; Aging Touch — accelerates time on contact, corroding metal, weakening armor, and breaking down barriers.",
+    passives: "B.O.T (Blessing of Time) — enhanced cognitive speed and reflexes allow her to process events faster than normal, resisting ambushes and reacting precisely; Temporal Awareness — perceives danger an instant before it happens, granting superior evasion and counter timing.",
+    stats: {Defense: 12,Strength: 10,Agility: 14,Intelligence: 20, Perception: 20,"Magic Control": 20,"Technique Control": 16 },
+    ultimate: "Chrono Collapse — Natasha freezes a large zone in time for several seconds. Every enemy and projectile inside is locked in stasis while she moves freely. When time resumes, all delayed attacks, spells, and impacts detonate simultaneously, overwhelming foes caught in the field."
 
+  },
   "Nelvin": {race: "Human", role: "Tank", title: "Titan Vanguard",
-  melee: "Giant Axe & Great Shield — a walking fortress able to crush enemies and shield allies simultaneously.",
-  abilities: "Invincibility — temporarily near-impervious form; Basic Shield Magic — generates barriers and reflects minor attacks; Ground Slam — knocks back and staggers enemies; Fortitude Roar — taunts foes while boosting allies' defense and morale.",
-  passives: "Rage Bait — gains resistance and strength when targeted; Stand Still — boosts defense when stationary; Enduring Spirit — regenerates HP when defending.",
-  stats: { Defense: 20, Strength: 16, Agility: 10, Intelligence: 14, Perception: 14, 'Magic Control': 10, 'Technique Control': 16 },
-  ultimate: "Colossus Rampage — Nelvin charges forward, swinging his axe in wide arcs while shielded, crushing enemies and creating a protective shockwave for allies."
+    melee: "Giant Axe & Great Shield — a walking fortress able to crush enemies and shield allies simultaneously.",
+    abilities: "Invincibility — temporarily near-impervious form; Basic Shield Magic — generates barriers and reflects minor attacks; Ground Slam — knocks back and staggers enemies; Fortitude Roar — taunts foes while boosting allies' defense and morale.",
+    passives: "Rage Bait — gains resistance and strength when targeted; Stand Still — boosts defense when stationary; Enduring Spirit — regenerates HP when defending.",
+    stats: { Defense: 20, Strength: 16, Agility: 10, Intelligence: 14, Perception: 14, 'Magic Control': 10, 'Technique Control': 16 },
+    ultimate: "Colossus Rampage — Nelvin charges forward, swinging his axe in wide arcs while shielded, crushing enemies and creating a protective shockwave for allies."
 },
 
  "Nosim": {race: "Human", role: "Witch", title: "Elemental Witch",
-  melee: "Arcane Staff — channels fire and lightning for ranged spells or enhanced close combat strikes.",
-  abilities: "Pyrokinesis — control over fire; Electrokinesis — manipulation of electricity; Storm Fuse — combining fire and lightning for devastating area attacks; Mana Surge — temporary magic and casting boost.",
-  passives: "Elemental Affinity — enhanced fire and lightning efficiency; Energy Conductor — lightning bounces between targets; Flame Resilience — reduced fire and electric damage.",
-  stats: { Defense: 10, Strength: 12, Agility: 11, Intelligence: 19, Perception: 17, 'Magic Control': 20, 'Technique Control': 18 },
-  ultimate: "Inferno Tempest — a massive storm of fire and lightning sweeps across the battlefield, scorching and electrocuting enemies for 15–20 seconds."
+    melee: "Arcane Staff — channels fire and lightning for ranged spells or enhanced close combat strikes.",
+    abilities: "Pyrokinesis — control over fire; Electrokinesis — manipulation of electricity; Storm Fuse — combining fire and lightning for devastating area attacks; Mana Surge — temporary magic and casting boost.",
+    passives: "Elemental Affinity — enhanced fire and lightning efficiency; Energy Conductor — lightning bounces between targets; Flame Resilience — reduced fire and electric damage.",
+    stats: { Defense: 10, Strength: 12, Agility: 11, Intelligence: 19, Perception: 17, 'Magic Control': 20, 'Technique Control': 18 },
+    ultimate: "Inferno Tempest — a massive storm of fire and lightning sweeps across the battlefield, scorching and electrocuting enemies for 15–20 seconds."
 },
 
  "Oprah": {race:"Celestial Hybrid", role:"Witch", title:"Fate Witch", img:"oprah.jpg",
