--- a/index.html
+++ b/index.html
@@ -241,7 +241,6 @@
     <div class="sheet" id="sheet"></div>
   </div>
   
-  
 
 <script>
 /* ---------------------------
@@ -692,5 +691,5 @@ function escapeJs(s){ return String(s).replaceAll("'", "\\'").replaceAll('"','\\
 
 </script>
  <p class="styled-text"> By Jeremy Muhia, You're class is coding wizard. </p>
-</body>
+ <p class="styled-text"> Will be making this into a video game before 2029.</p>
 </html>
