Expanded skill set for the brothers

--- a/index.html
+++ b/index.html
@@ -243,35 +243,39 @@ const heroes = {
     members: {
       "Philip": {
         race: "Human",
-        role: "Shadowstalker",
-        title: "Younger Twin",
-        melee: "Twin Daggers — fast strikes with shadow trails",
+        role: "Shadowstalker / Trickster",
+        title: "Whisperblade",
+        melee: "Twin Daggers — swift and silent, perfect for rapid, unpredictable strikes.",
         abilities: [
-          ["Shadow Step", "Teleports a short distance through shadows."],
-          ["Silent Strike", "Deals critical damage if undetected."]
+          ["Silent Step", "Moves unseen for short bursts."],
+          ["Phantom Echo", "Leaves afterimages that confuse enemies."],
+          ["Mirror Slash", "Attacks from multiple angles, simulating multiple attackers."],
+          ["Shadow Merge", "Combines with Steve to become a single shadow entity for coordinated attacks."]
         ],
         passives: [
-          "Quick Reflexes — dodges some attacks automatically.",
-          "Stealth Affinity — harder to detect in darkness."
+          "Tactical Bond — Gains strength when Steve is nearby.",
+          "Quick Reflexes — Reacts faster to danger when in shadows."
         ],
-        stats: { Defense:10, Strength:12, Agility:18, Intelligence:15, Perception:16 },
-        ultimate: "Twin Shadows — merges with Steve briefly to strike all enemies at once."
+        stats: {Defense:12, Strength:14, Agility:19, Intelligence:16, Perception:17, "Magic Control":15, "Technique Control":18},
+        ultimate: "Shadow Merge — Philip and Steve synchronize perfectly, merging into a shadow entity that strikes with blinding speed and overwhelming precision."
       },
       "Steve": {
         race: "Human",
-        role: "Shadowstalker",
-        title: "Older Twin",
-        melee: "Cloak Blade — swings with precision and stealth",
+        role: "Shadowstalker / Strategist",
+        title: "Nightcloak",
+        melee: "Crescent Blade — curves to slice through shadows and foes alike.",
         abilities: [
-          ["Cloak of Night", "Becomes invisible for a short period."],
-          ["Backstab", "Extra damage from behind, more effective if Philip is nearby."]
+          ["Dark Veil", "Cloaks an area in darkness, hiding allies and confusing enemies."],
+          ["Twin Link", "Syncs attacks with Philip for combo strikes."],
+          ["Silent Snare", "Traps enemies in shadow tendrils briefly."],
+          ["Twin Eclipse", "Coordinates with Philip to dominate the battlefield with shadows."]
         ],
         passives: [
-          "Tactical Mind — can analyze battle faster.",
-          "Shadow Bond — slightly boosts Philip when near him."
+          "Tactical Bond — Gains strength when Philip is nearby.",
+          "Predator's Patience — Critical strike chance rises the longer he waits undetected."
         ],
-        stats: { Defense:12, Strength:14, Agility:16, Intelligence:17, Perception:15 },
-        ultimate: "Twin Shadows — merges with Philip briefly to strike all enemies at once."
+        stats: {Defense:13, Strength:15, Agility:18, Intelligence:17, Perception:16, "Magic Control":16, "Technique Control":18},
+        ultimate: "Twin Eclipse — Steve and Philip orchestrate a perfect shadow assault, controlling the battlefield with illusions, traps, and rapid strikes."
       }
     }
   },
